19-network-policies/allow-web-application.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-web-application
  namespace: <YOUR_NAME>
spec:
  podSelector:
    matchLabels:
      app: web-application
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            network-policy/web-application: allow
