19-network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
  namespace: <YOUR_NAME>
spec:
  podSelector: {}
  policyTypes:
  - Ingress
